--- a/index.html
+++ b/index.html
@@ -12,39 +12,57 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="header-row-1">
-                <p></p>
+                <p>MÀN HÌNH CHẤT QUÀ ĐỘC NGAY NGẤT TRONG MÙA XUÂN NÀY!</p>
             </div>
-            <div class="header-row-2">
-                <div class="header-row-2-logo">
-                    <img src="" alt="">
-                </div>
-                <div class="header-row-2-menu">
-                    <ul class="header-row-2-menu-box">
-                        <li><a href="">Trang chủ</a></li>
-                        <li><a href="">Sản phẩm</a></li>
-                        <li><a href="">về chúng tôi</a></li>
-                        <li><a href="">bài viết</a></li>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                      </li>
                     </ul>
+                    <form class="d-flex" role="search header-row-2-search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <span class="material-symbols-outlined">search</span>  
+                    </form>
+                    <div class="header-row-2-user">
+                        <span class="material-symbols-outlined">person</span>
+                    </div>
+                    <div class="header-row-2-cart">
+                        <span class="material-symbols-outlined">shopping_cart</span>
+                    </div>
+                    <hr>
+                  </div>
                 </div>
-                <div class="header-row-2-search">
-                    <input placeholder="Tìm sản phẩm của bạn" type="text" />
-                    <span class="material-symbols-outlined">search</span>   
-                </div>
-                <div class="header-row-2-user">
-                    <span class="material-symbols-outlined">person</span>
-                </div>
-                <div class="header-row-2-cart">
-                    <span class="material-symbols-outlined">shopping_cart</span>
-                </div>
-                <hr>
-            </div>
-        </div>
-
+              </nav>
         <div class="seciton-banner-1">
             <img src="" alt="">
         </div>
