--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -51,14 +52,15 @@
                   <a class="nav-link" href="#">Liên hệ</a>
                 </li>
               </ul>
-              <form class="d-flex" role="search header-row-2-search" style="" >
-                <input class="form-control me-2" style="width: 100%;" type="search" placeholder="Search" aria-label="Search">
+              <form class="d-flex" role="search header-row-2-search" style="">
+                <input class="form-control me-2" style="width: 100%;" type="search" placeholder="Search"
+                  aria-label="Search">
                 <span class="material-symbols-outlined">search</span>
               </form>
-              <div class="header-row-2-user">
+              <div class="header-row-2-user ms-2">
                 <span class="material-symbols-outlined">person</span>
               </div>
-              <div class="header-row-2-cart">
+              <div class="header-row-2-cart ms-2">
                 <span class="material-symbols-outlined">shopping_cart</span>
               </div>
               <hr>
@@ -67,23 +69,94 @@
         </nav>
       </div>
     </div>
-    <div class="seciton-banner-1">
-      <img src alt>
-    </div>
 
-    <div class="section-1">
-      <div class="section-1-container">
-        <div class="section-1-container-title">
-          <h3>Danh mục</h3>
-        </div>
-        <div class="section-1-container-content">
-          <div class="section-1-container-content-box">
 
-          </div>
+
+
+  </div>
+  <div class="container mt-3 d-flex justify-content-center">
+    <img style="width: 100%;" src="/imgduan1/banner1.png" alt="">
+  </div>
+  <div class="section-1 pt-3 ms-5">
+    <div class="section-1-container">
+      <div class="section-1-container-title">
+        <h3>Danh mục</h3>
+      </div>
+      <div class="section-1-container-content">
+        <div class="section-1-container-content-box">
+
         </div>
       </div>
     </div>
   </div>
+
+  <div class="container mt-5">
+    <h3 class="mb-4">Sản Phẩm HOT</h3>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100 text-center rounded-2">
+          <img src="./imgduan1/dell1.jpg" class="card-img-top" alt="Product Image">
+          <div class="card-body">
+            <h5 class="card-title">Smart Tivi Samsung Crystal UHD 4K 55 inch</h5>
+            <p class="card-text text-danger fw-bold">8.990.000₫</p>
+            <p class="badge bg-light text-dark">Freeship từ 2km đổ lại</p>
+          </div>
+          <div class="card-footer d-flex justify-content-between align-items-center">
+            <div class="text-warning">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+            </div>
+            <button class="btn btn-light"><i class="fa fa-heart"></i> Yêu thích</button>
+          </div>
+        </div>
+      </div>
+      <!-- Lặp lại thẻ div .col để thêm các sản phẩm khác -->
+    </div>
+  </div>
+  
+
+  <div class="container">
+    <div class="section-5-container">
+      <div class="">
+        <h3>Sản Phẩm Mới</h3>
+      </div>
+      <div class="section-5-container-box d-flex justify-content-between">
+        <div class="section-5-container-box-image-1" style="width: 642px;">
+          <img style="width: 100%; height: 715px;" src="./imgduan1/banner3.jpg" alt="">
+        </div>
+        <div class="section-5-container-box-image-2" style="width: 642px; height: 715px;">
+          <img style="width: 100%; height: 350px;" src="./imgduan1/banner4.jpg" alt="">
+          <img style="width: 100%; height: 350px;" src="./imgduan1/banner5.jpg" alt="">
+        </div>
+      </div>
+
+      <!-- Thêm phần này cho các icon -->
+      <div class="d-flex justify-content-center mt-3 pt-4 gap-3">
+        <div class="text-center mx-5">
+          <span class="material-symbols-outlined" style="font-size: 45px;">local_shipping</span>
+          <p style="font-weight: 600;">Giao hàng tốc độ</p>
+          <p style="font-size: 13px;">Miễn phí giao hàng từ 2km</p>
+        </div>
+        <div class="text-center mx-3">
+          <span class="material-symbols-outlined" style="font-size: 45px;">
+            support_agent
+          </span>
+          <p style="font-weight: 600;">Liên hệ với chúng tôi</p>
+          <p style="font-size: 13px;">Hoạt động 24/7</p>
+        </div>
+        <div class="text-center mx-5">
+          <span class="material-symbols-outlined" style="font-size: 45px;">verified_user</span>
+          <p style="font-weight: 600;">Bảo hành chính hảng</p>
+          <p>Bảo hành đến 30 ngày</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 </body>
 
 </html>
