--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="content">
+            <div class="left-side">
+                <div class="address detail">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
