--- a/detail.html
+++ b/detail.html
@@ -1,20 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <!-- jQuery (Bootstrap JS yêu cầu jQuery) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <div class="container">
+
+
+        <!--lịch sử người dùng -->
+        <div class="direction mb-5">
+            <a href="#">Trang chủ</a> / <a href="#">Màn hình</a> / <span>Màn hình Samsung S36C LS24C366EAEXXV | 24 inch,
+                Full HD, VA, 75Hz, 4ms, cong</span>
+        </div>
+        <!--hình ảnh-->
+        <div class="product-container d-flex justify-content-between">
+            <div class="images">
+                <img src="./imgduan1/dell1.jpg" width="675px" height="450px" style="object-fit: cover;" alt="Main Product">
+                <div class="smallimg">
+                    <img src="./imgduan1/dell1.jpg" width="150px" height="146px" alt="" onclick="changeImage(this)">
+                    <img src="./imgduan1/ctdell1_1.jpg" width="150px" height="146px" alt="" onclick="changeImage(this)">
+                    <img src="./imgduan1/ctdell1_2.jpg" width="150px" height="146px" alt="" onclick="changeImage(this)">
+                    <img src="./imgduan1/ctdell1_3.webp" width="150px" height="146px" alt=""
+                        onclick="changeImage(this)">
+                </div>
+            </div>
+            <!--info sản phẩm-->
+            <div style="width: 42%;">
+                <div class="product-info">
+                    <h1>Màn hình Samsung S36C LS24C366EAEXXV | 24 inch, Full HD, VA, 75Hz, 4ms, cong</h1>
+                    <div class="rating">★★★★★ (Đã bán 150)</div>
+                    <div class="price">8.990.000₫</div>
+                </div> 
+                <hr>
+                <!--buton-->
+                <div class="buttons">
+                    <button onclick="decreaseQuantity()">-</button>
+                    <input type="number" value="1" id="quantity" min="1">
+                    <button onclick="increaseQuantity()">+</button>
+                    <button class="buy-now">Mua ngay</button>
+                    <span class="material-symbols-outlined ms-2"> favorite </span>
+
+                </div>
+
+            </div>
+        </div>
 </body>
+
 </html>
