--- a/login.html
+++ b/login.html
@@ -17,96 +17,48 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-text d-flex justify-content-center align-items-center bg-dark"
-            style="height: 40px; width: 100%">
-            <p class="text-white" style="margin-bottom: 0px !important">
-                MÀN HÌNH CHẤT QUÀ ĐỘC NGAY NGẤT TRONG MÙA XUÂN NÀY!
-            </p>
-        </div>
-        <div class="box-nav border-bottom border-dark pt-1 pb-1">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg">
-                    <div class="container-fluid">
-                        <img style="width: 11%;" src="./imgduan1/logo.jpg" alt="">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item ms-3">
-                                    <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
-                                </li>
-                                <li class="nav-item ms-3">
-                                    <a class="nav-link" href="#">Sản phẩm</a>
-                                </li>
-                                <li class="nav-item ms-3">
-                                    <a class="nav-link" href="#">Về chúng tôi</a>
-                                </li>
-                                <li class="nav-item ms-3">
-                                    <a class="nav-link" href="#">Liên hệ</a>
-                                </li>
-                            </ul>
-                            <form class="d-flex" role="search header-row-2-search" style="">
-                                <input class="form-control me-2" style="width: 100%" type="search" placeholder="Search"
-                                    aria-label="Search" />
-                                <span class="material-symbols-outlined">search</span>
-                            </form>
-                            <div class="header-row-2-user ms-2">
-                                <span class="material-symbols-outlined">person</span>
-                            </div>
-                            <div class="header-row-2-cart ms-2">
-                                <span class="material-symbols-outlined">shopping_cart</span>
-                            </div>
-                            <hr />
-                        </div>
-                    </div>
-                </nav>
-            </div>
-        </div>
+
     </div>
-    <div class="container d-flex flex-column align-items-center ">
-        <img src="./imgduan1/logo.jpg" alt="Logo" style="width: 25%; margin-bottom: 20px;">
+    <div class="container d-flex flex-column align-items-center">
+        <img src="./imgduan1/logo.jpg" alt="Logo" style="width: 250px;">
         <h3 class="text-center mb-3">Đăng nhập với</h3>
         <div class="d-flex justify-content-center mb-3">
-            <img style="width: 4%; height: 4%;" src="./imgduan1/logoface.webp" alt="">
-            <h6 class="d-flex align-items-center ms-2 me-3">Facebook</h6>
-            <img style="width: 4%; height: 4%;" src="./imgduan1/logogg.webp" alt="">
-            <h6 class="d-flex align-items-center ms-2">Google</h6>
+            <img style="width: 8%; height: 8%;" src="./imgduan1/logoface.webp" alt="">
+            <h6 class="d-flex align-items-center ms-2 me-4 pt-2">Facebook</h6>
+            <img style="width: 8%; height: 8%;" src="./imgduan1/logogg.webp" alt="">
+            <h6 class="d-flex align-items-center ms-2 pt-2">Google</h6>
         </div>
-        
+
         <div class="w-100" style="max-width: 400px;">
             <div class="d-flex align-items-center mb-3">
                 <hr class="flex-grow-1">
                 <span class="px-2">Hoặc</span>
                 <hr class="flex-grow-1">
             </div>
-              <!-- Login form -->
-        <form class="w-100">
-            <div class="mb-3">
-                <input type="email" class="form-control rounded-pill" placeholder="Nhập email và số điện thoại của bạn">
-            </div>
-            <div class="mb-3">
-                <input type="password" class="form-control rounded-pill" placeholder="Mật khẩu">
-            </div>
-            <div class="d-flex justify-content-between mb-3">
-                <a href="#" class="text-decoration-none">Quên mật khẩu?</a>
-            </div>
-            <button type="submit" class="btn btn-primary w-100 rounded-pill">Đăng nhập</button>
-        </form>
+            <!-- Login form -->
+            <form>
+                <input type="email" class="custom-input" placeholder="Nhập email và số điện thoại của bạn">
+                <input type="password" class="custom-input" placeholder="Mật khẩu">
 
-        <!-- Sign up link -->
-        <div class="text-center mt-3">
-            <p>Bạn chưa có tài khoản? <a href="#" class="text-decoration-none">Đăng ký ngay</a></p>
+                <div class="d-flex justify-content-end mb-3">
+                    <a href="#" class="text-decoration-none">Quên mật khẩu?</a>
+                </div>
+
+
+                <button type="submit" class="custom-button">Đăng nhập</button>
+            </form>
+
+            <!-- Sign up link -->
+            <div class="text-center mt-3">
+                <p>Bạn chưa có tài khoản? <a href="#" class="text-decoration-none">Đăng ký ngay</a></p>
+            </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
