--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     <div class="container mt-3 d-flex justify-content-center">
       <img style="width: 100%" src="/imgduan1/banner1.png" alt="" />
     </div>
-    <div class="section-1 pt-3 ms-5">
-      <div class="section-1-container">
+    <div class="section-1 pt-3">
+      <div class="section-1-container container">
         <div class="section-1-container-title">
           <h3>Danh mục</h3>
         </div>
