--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -517,12 +518,12 @@
         <h3 class="pt-4">Sản Phẩm Mới</h3>
       </div>
       <div class="section-5-container-box d-flex justify-content-between">
-        <div class="section-5-container-box-image-1" style="width: 642px">
-          <img style="width: 100%; height: 715px" src="./imgduan1/banner3.jpg" alt="" />
+        <div class="section-5-container-box-image-1 col-md-4" style="width: 642px">
+          <img style="width: 100%; height: 715px; object-fit: cover;" src="./imgduan1/banner3.jpg" alt="" />
         </div>
-        <div class="section-5-container-box-image-2" style="width: 642px; height: 715px">
-          <img style="width: 100%; height: 350px" src="./imgduan1/banner4.jpg" alt="" />
-          <img style="width: 100%; height: 350px" src="./imgduan1/banner5.jpg" alt="" />
+        <div class="section-5-container-box-image-2 col-md-4" style="width: 642px; height: 715px">
+          <img style="width: 100%; height: 350px; object-fit: cover;" src="./imgduan1/banner4.jpg" alt="" />
+          <img style="width: 100%; height: 350px; object-fit: cover;" src="./imgduan1/banner5.jpg" alt="" />
         </div>
       </div>
 
@@ -550,55 +551,63 @@
   <!-- Phần footer với background rộng hết màn hình và nội dung căn giữa -->
   <div class="container-fluid footer bg-light mt-4" style="background-color: #f8f9fa;">
     <div class="container py-4">
-      <div class="row gx-4"> <!-- Thêm lớp gx-4 để tạo khoảng cách ngang giữa các cột -->
-        <div class="col-md-4 mb-4 col-12 col-sm-6 col-lg-3   style="transition: all .3s ease-in-out;"contact-info mb-4" style="transition: all .3s ease-in-out;">
-          <h6 class="mb-3">Tổng đài hỗ trợ miễn phí</h6>
-          <p>Gọi mua hàng 01658701066 (7h-22h)</p>
-          <p>Gọi khiếu nại 01658701066 (8h-21h)</p>
-          <p>Gọi bảo hành 01658701066 (8h-21h)</p>
-          <h6 class="mt-4 mb-3">Đăng ký để nhận thông tin</h6>
-          <form class="form-inline w-100">
-            <input type="email" class="form-control w-75 mb-2" placeholder="Enter your email">
-            <button type="submit" class="btn btn-primary w-25 mb-2">></button>
-          </form>
+        <div class="row gx-4 gy-4">
+            <!-- Thông tin hỗ trợ -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+                <h6 class="mb-3">Tổng đài hỗ trợ miễn phí</h6>
+                <p>Gọi mua hàng 01658701066 (7h-22h)</p>
+                <p>Gọi khiếu nại 01658701066 (8h-21h)</p>
+                <p>Gọi bảo hành 01658701066 (8h-21h)</p>
+                <h6 class="mt-4 mb-3">Đăng ký để nhận thông tin</h6>
+                <form class="form-inline w-100">
+                    <input type="email" class="form-control w-75 mb-2" placeholder="Enter your email">
+                    <button type="submit" class="btn btn-primary w-25 mb-2">></button>
+                </form>
+            </div>
+            
+            <!-- Thông tin và chính sách -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+                <h6 class="mb-3">Thông tin và chính sách</h6>
+                <ul class="list-unstyled">
+                    <li><a href="#">Mua hàng và thanh toán online</a></li>
+                    <li><a href="#">Mua hàng trả góp online</a></li>
+                    <li><a href="#">Mua hàng trả góp bằng thẻ tín dụng</a></li>
+                    <li><a href="#">Chính sách giao hàng</a></li>
+                    <li><a href="#">Chính sách bảo hành</a></li>
+                    <li><a href="#">Tra thông tin bảo hành</a></li>
+                    <li><a href="#">Thông tin hóa đơn mua hàng</a></li>
+                </ul>
+            </div>
+
+            <!-- Dịch vụ và thông tin khác -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+                <h6 class="mb-3">Dịch vụ và thông tin khác</h6>
+                <ul class="list-unstyled">
+                    <li><a href="#">Ưu đãi thanh toán</a></li>
+                    <li><a href="#">Quy chế hoạt động</a></li>
+                    <li><a href="#">Chính sách bảo mật thông tin cá nhân</a></li>
+                    <li><a href="#">Đổi trả trong 10 ngày</a></li>
+                    <li><a href="#">Chính sách đổi trả</a></li>
+                </ul>
+            </div>
+
+            <!-- Download App và mạng xã hội -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+                <h6 class="mb-3">Download App</h6>
+                <div class="mb-3">
+                    <img style="width: 30%;" src="./imgduan1/QR_code.webp" alt="QR Code" class="img-fluid">
+                </div>
+                <div class="mt-4" style="border-bottom: 1px solid grey; padding-bottom: 7px;">
+                    <a href="#" class="mx-2"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="mx-2"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4 mb-4 col-12 col-sm-6 col-lg-3"  style="transition: all .3s ease-in-out;">
-          <h6 class="mb-3">Thông tin và chính sách</h6>
-          <ul class="list-unstyled">
-            <li><a href="#">Mua hàng và thanh toán online</a></li>
-            <li><a href="#">Mua hàng trả góp online</a></li>
-            <li><a href="#">Mua hàng trả góp bằng thẻ tín dụng</a></li>
-            <li><a href="#">Chính sách giao hàng</a></li>
-            <li><a href="#">Chính sách bảo hành</a></li>
-            <li><a href="#">Tra thông tin bảo hành</a></li>
-            <li><a href="#">Thông tin hóa đơn mua hàng</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 mb-4 col-12 col-sm-6 col-lg-3"  style="transition: all .3s ease-in-out;">
-          <h6 class="mb-3">Dịch vụ và thông tin khác</h6>
-          <ul class="list-unstyled">
-            <li><a href="#">Ưu đãi thanh toán</a></li>
-            <li><a href="#">Quy chế hoạt động</a></li>
-            <li><a href="#">Chính sách bảo mật thông tin cá nhân</a></li>
-            <li><a href="#">Đổi trả trong 10 ngày</a></li>
-            <li><a href="#">Chính sách đổi trả</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4 mb-4 col-12 col-sm-6 col-lg-3"  style="transition: all .3s ease-in-out;">
-          <h6 class="mb-3">Download App</h6>
-          <div class="mb-3">
-            <img style="width: 30%;" src="./imgduan1/QR_code.webp" alt="QR Code" class="img-fluid">
-          </div>
-          <div class="mt-4" style="border-bottom: 1px solid grey; padding-bottom: 7px;">
-            <a href="#" class="mx-2"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="mx-2"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="mx-2"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="mx-2"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
+
 
   </div>
 
