--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -15,10 +15,11 @@
         <h3 class="mb-4">Quên mật khẩu</h3>
         <!-- Login form -->
         <form class="w-100" style="max-width: 400px;">
-            <input type="text" class="custom-input mb-3" placeholder="Nhập email hoặc số điện thoại">
+            <input type="text" class="custom-input mb-3" placeholder="Nhập email hoặc số điện thoại" id="email">
             <button type="submit" class="custom-button">Quên mật khẩu</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
