--- a/signup.html
+++ b/signup.html
@@ -34,11 +34,11 @@
             
             <!-- Login form -->
             <form>
-                <input type="text" class="custom-input" placeholder="Nhập họ và tên">
-                <input type="text" class="custom-input" placeholder="Nhập số điện thoại">
-                <input type="email" class="custom-input" placeholder="Nhập email">
-                <input type="password" class="custom-input" placeholder="Nhập mật khẩu">
-                <input type="password" class="custom-input" placeholder="Nhập lại mật khẩu">
+                <input type="text" class="custom-input" placeholder="Nhập họ và tên" id="name">
+                <input type="text" class="custom-input" placeholder="Nhập số điện thoại" id="number">
+                <input type="email" class="custom-input" placeholder="Nhập email" id="email">
+                <input type="password" class="custom-input" placeholder="Nhập mật khẩu" id="password">
+                <input type="password" class="custom-input" placeholder="Nhập lại mật khẩu" id="passwordConfirmation">
 
                 <button type="submit" class="custom-button">Đăng Ký</button>
             </form>
@@ -50,6 +50,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="signup.js"></script>
 </body>
 
 </html>
