--- a/index.html
+++ b/index.html
@@ -71,11 +71,29 @@
     </div>
   </div>
 
-
-  <div class="container mt-3 d-flex justify-content-center">
-    <img style="width: 100%" src="/imgduan1/banner1.png" alt="" />
+  <!-- Banner Slider -->
+  <div id="bannerSlider" class="carousel slide mt-3 container mt-3 d-flex justify-content-center"
+    data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img style="width: 100%;" src="/imgduan1/banner1.png" alt="Banner 1" />
+      </div>
+      <div class="carousel-item">
+        <img style="width: 100%;" src="/imgduan1/slider1-1.webp" alt="Banner 2" />
+      </div>
+      <div class="carousel-item">
+        <img style="width: 100%" src="/imgduan1/slider2-2.jpg" alt="Banner 3" />
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#bannerSlider" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#bannerSlider" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-
 
   <div class="container my-4">
     <h2 class="text-center mb-4">Danh Mục</h2>
@@ -548,65 +566,65 @@
     </div>
   </div>
 
-  <!-- Phần footer với background rộng hết màn hình và nội dung căn giữa -->
+  <!-- Footer with input and button on the same row -->
   <div class="container-fluid footer bg-light mt-4" style="background-color: #f8f9fa;">
     <div class="container py-4">
-        <div class="row gx-4 gy-4">
-            <!-- Thông tin hỗ trợ -->
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
-                <h6 class="mb-3">Tổng đài hỗ trợ miễn phí</h6>
-                <p>Gọi mua hàng 01658701066 (7h-22h)</p>
-                <p>Gọi khiếu nại 01658701066 (8h-21h)</p>
-                <p>Gọi bảo hành 01658701066 (8h-21h)</p>
-                <h6 class="mt-4 mb-3">Đăng ký để nhận thông tin</h6>
-                <form class="form-inline w-100">
-                    <input type="email" class="form-control w-75 mb-2" placeholder="Enter your email">
-                    <button type="submit" class="btn btn-primary w-25 mb-2">></button>
-                </form>
-            </div>
-            
-            <!-- Thông tin và chính sách -->
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
-                <h6 class="mb-3">Thông tin và chính sách</h6>
-                <ul class="list-unstyled">
-                    <li><a href="#">Mua hàng và thanh toán online</a></li>
-                    <li><a href="#">Mua hàng trả góp online</a></li>
-                    <li><a href="#">Mua hàng trả góp bằng thẻ tín dụng</a></li>
-                    <li><a href="#">Chính sách giao hàng</a></li>
-                    <li><a href="#">Chính sách bảo hành</a></li>
-                    <li><a href="#">Tra thông tin bảo hành</a></li>
-                    <li><a href="#">Thông tin hóa đơn mua hàng</a></li>
-                </ul>
-            </div>
-
-            <!-- Dịch vụ và thông tin khác -->
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
-                <h6 class="mb-3">Dịch vụ và thông tin khác</h6>
-                <ul class="list-unstyled">
-                    <li><a href="#">Ưu đãi thanh toán</a></li>
-                    <li><a href="#">Quy chế hoạt động</a></li>
-                    <li><a href="#">Chính sách bảo mật thông tin cá nhân</a></li>
-                    <li><a href="#">Đổi trả trong 10 ngày</a></li>
-                    <li><a href="#">Chính sách đổi trả</a></li>
-                </ul>
-            </div>
-
-            <!-- Download App và mạng xã hội -->
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
-                <h6 class="mb-3">Download App</h6>
-                <div class="mb-3">
-                    <img style="width: 30%;" src="./imgduan1/QR_code.webp" alt="QR Code" class="img-fluid">
-                </div>
-                <div class="mt-4" style="border-bottom: 1px solid grey; padding-bottom: 7px;">
-                    <a href="#" class="mx-2"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="mx-2"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+      <div class="row gx-4 gy-4">
+        <!-- Thông tin hỗ trợ -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+          <h6 class="mb-3">Tổng đài hỗ trợ miễn phí</h6>
+          <p>Gọi mua hàng 01658701066 (7h-22h)</p>
+          <p>Gọi khiếu nại 01658701066 (8h-21h)</p>
+          <p>Gọi bảo hành 01658701066 (8h-21h)</p>
+          <h6 class="mt-4 mb-3">Đăng ký để nhận thông tin</h6>
+          <form class="form-inline w-100 d-flex">
+            <input type="email" class="form-control w-75 mb-2" placeholder="Enter your email">
+            <button type="submit" class="btn btn-primary w-25 mb-2">></button>
+          </form>
         </div>
+
+        <!-- Thông tin và chính sách -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+          <h6 class="mb-3">Thông tin và chính sách</h6>
+          <ul class="list-unstyled">
+            <li><a href="#">Mua hàng và thanh toán online</a></li>
+            <li><a href="#">Mua hàng trả góp online</a></li>
+            <li><a href="#">Mua hàng trả góp bằng thẻ tín dụng</a></li>
+            <li><a href="#">Chính sách giao hàng</a></li>
+            <li><a href="#">Chính sách bảo hành</a></li>
+            <li><a href="#">Tra thông tin bảo hành</a></li>
+            <li><a href="#">Thông tin hóa đơn mua hàng</a></li>
+          </ul>
+        </div>
+
+        <!-- Dịch vụ và thông tin khác -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+          <h6 class="mb-3">Dịch vụ và thông tin khác</h6>
+          <ul class="list-unstyled">
+            <li><a href="#">Ưu đãi thanh toán</a></li>
+            <li><a href="#">Quy chế hoạt động</a></li>
+            <li><a href="#">Chính sách bảo mật thông tin cá nhân</a></li>
+            <li><a href="#">Đổi trả trong 10 ngày</a></li>
+            <li><a href="#">Chính sách đổi trả</a></li>
+          </ul>
+        </div>
+
+        <!-- Download App và mạng xã hội -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3" style="transition: all .3s ease-in-out;">
+          <h6 class="mb-3">Download App</h6>
+          <div class="mb-3">
+            <img style="width: 30%;" src="./imgduan1/QR_code.webp" alt="QR Code" class="img-fluid">
+          </div>
+          <div class="mt-4" style="border-bottom: 1px solid grey; padding-bottom: 7px;">
+            <a href="#" class="mx-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="mx-2"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="mx-2"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="mx-2"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 
 
   </div>
