--- a/login.html
+++ b/login.html
@@ -31,9 +31,16 @@
             </div>
             
             <!-- Login form -->
-            <form>
-                <input type="email" class="form-control mb-3 custom-input" placeholder="Nhập email và số điện thoại của bạn">
-                <input type="password" class="form-control mb-3 custom-input" placeholder="Mật khẩu">
+            <form id="loginForm" novalidate>
+                <div class="form-group mb-3">
+                    <input type="email" class="form-control custom-input" id="email" placeholder="Nhập email và số điện thoại của bạn" required>
+                    <!-- <div class="invalid-feedback">Vui lòng nhập một email hợp lệ.</div> -->
+                </div>
+
+                <div class="form-group mb-3">
+                    <input type="password" class="form-control custom-input" id="password" placeholder="Mật khẩu" required>
+                    <!-- <div class="invalid-feedback">Vui lòng nhập mật khẩu.</div> -->
+                </div>
                 
                 <div class="d-flex justify-content-end mb-3">
                     <a href="#" class="text-decoration-none">Quên mật khẩu?</a>
@@ -48,7 +55,9 @@
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
