--- a/otb.html
+++ b/otb.html
@@ -26,5 +26,6 @@
         <button type="submit" class="custom-button mt-4">Tiếp tục</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="otb.js"></script>
 </body>
 </html>
