--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                 </li>
               </ul>
               <form class="d-flex position-relative" role="search header-row-2-search">
-                <input class="form-control me-2" style="width: 100%" type="search" placeholder="Search" aria-label="Search" />
+                <input class="form-control me-2" style="width: 100%" type="search" placeholder="Search"
+                  aria-label="Search" />
                 <span class="material-symbols-outlined search-icon">search</span>
               </form>
-              
+
               <div class="header-row-2-user ms-2">
                 <span class="material-symbols-outlined">person</span>
               </div>
@@ -158,8 +159,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -188,8 +189,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -218,8 +219,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -248,8 +249,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -287,8 +288,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -317,8 +318,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -347,8 +348,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -377,8 +378,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -407,8 +408,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -437,8 +438,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -467,8 +468,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -497,8 +498,8 @@
               alt="Product Image" /></a>
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
-              <h5 class="card-title">
-                Smart Tivi Samsung Crystal UHD 4K 55 inch
+              <h5 class="card-title product-name">
+                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
