--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
+    <div class="thancontainer">
         <div class="cart">
             <h2>Trang chủ / Giỏ hàng</h2>
             <table>
