--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,13 @@
                     <p>nếu bạn có bất kỳ công việc nào từ tôi hoặc bất kỳ loại câu hỏi nào liên quan đến hướng dẫn của tôi, bạn có thể gửi tin nhắn cho tôi từ đây. Tôi rất hân hạnh được giúp đỡ bạn</p>
                     <form action="#">
                         <div class="input-box">
-                            <input type="text" placeholder="Nhập tên của bạn">
+                            <input type="text" class="input-field-contact" placeholder="Nhập tên của bạn">
                         </div>
                         <div class="input-box">
-                            <input type="text" placeholder="Nhập Email của bạn">
+                            <input type="text" class="input-field-contact" placeholder="Nhập Email của bạn">
                         </div><br>
                         <div class="input-box message-box">
-                            <textarea name="" id="" placeholder="Nhập văn bản"></textarea>
+                            <textarea name="" class="input-field-contact" id="" placeholder="Nhập văn bản"></textarea>
                         </div><br>
                         <div class="button">
                            <input type="button" value="gửi">
