--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
             </div>
-            <div class="btn-favorite" style="cursor: pointer; height: 20px;" onclick="addFavorite(this)">
+            <div class="btn-favorite" style="cursor: pointer; height: 20px;">
               <span class="material-symbols-outlined ms-2"> favorite </span>
             </div>
           </div>
