--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
   <div class="container mt-5">
     <div class="row">
       <!-- Box lọc sản phẩm -->
-      <div class="col-12 col-md-3">
+      <form action="#" class="col-12 col-md-3">
         <div class="filter-box">
           <h5>Lọc sản phẩm</h5>
           <div class="mb-3">
@@ -50,8 +50,10 @@
               <input type="number" class="form-control" placeholder="Đến" min="0">
             </div>
           </div>
+          <input type="submit" value="Lọc" class="btn btn-success text-white mt-3">
+
         </div>
-      </div>
+      </form>
 
       <!-- Box sản phẩm -->
       <div class="col-12 col-md-9">
