--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container d-flex flex-column align-items-center" style="max-width: 600px;">
         <img src="./imgduan1/logo.jpg" alt="Logo" style="width: 250px;">
-        <h3 class="text-center mb-3">Đăng nhập với</h3>
+        <h3 class="text-center mb-3">Đăng ký với</h3>
         
         <!-- Social login -->
         <div class="d-flex justify-content-center mb-3">
