--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 <span class="material-symbols-outlined search-icon">search</span>
               </form>
 
-              <div class="header-row-2-user ms-2">
+              <div class="header-row-2-user ms-2 mt-2">
                 <span class="material-symbols-outlined">person</span>
               </div>
-              <div class="header-row-2-cart ms-2">
+              <div class="header-row-2-cart ms-2 mt-2">
                 <span class="material-symbols-outlined">shopping_cart</span>
               </div>
               <hr />
@@ -523,7 +523,7 @@
       </div>
       <div class="d-flex justify-content-center w-100 mt-3">
         <button class="btn btn-primary " type="submit" style="--bs-btn-padding-y: 0.5rem; --bs-btn-padding-x: 2.5rem; 
-            --bs-btn-font-size: 1rem;">Button</button>
+            --bs-btn-font-size: 1rem;">Xem Thêm</button>
       </div>
 
     </div>
