sửa lại css form đăng nhập, đăng ký

--- a/emailotb.html
+++ b/emailotb.html
@@ -19,12 +19,22 @@
 </head>
 
 <style>
-    .otp-container {
+     .otp-container {
       max-width: 400px;
       padding: 30px;
       border: 1px solid #ddd;
       border-radius: 10px;
       background-color: #f9f9f9;
+    }
+    .otp-number {
+      font-size: 30px;
+      font-weight: bold;
+      color: #28a745;
+    }
+    .otp-email {
+      font-size: 24px;
+      font-weight: bold;
+      color: #007bff;
     }
     .otp-footer {
       font-size: 12px;
@@ -32,22 +42,36 @@
       margin-top: 20px;
       color: #6c757d;
     }
+    .footer-link {
+      color: #007bff; 
+    }
 </style>
-<body class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <div class="otp-container">
-       <div class="text-center">
-        <h2 class="text-primary"><strong>Email OTP</strong></h2>
-        <hr>
-        <p>Dear User</p>
-        <p>Your One-Time Password (OTP) is:</p>
-        <p class="text-success fs-2"><strong>123456</strong></p>
-        <p>Please use this OTP to complete your login process. Do not share this code with anyone.</p>
-       </div>
-       <div class="otp-footer">
-        <p>Thank you for using Email OTP!</p>
-        <p><span class="text-primary">© www.rohitchouhan.com.</span> All rights reserved.</p>
-      </div>
+<body style="height: 100vh;display: flex; justify-content: center; align-items: center;">
+  <div style="max-width: 400px;
+  padding: 30px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #f9f9f9;">
+    <div style="text-align: center;">
+      <h2 style="font-size: 24px;
+      font-weight: bold;
+      color: #007bff;"><strong>Email OTP</strong></h2>
+      <hr>
+      <p>Gửi khách hàng của tôi</p>
+      <p>Mã OTP của bạn:</p>
+      <p style="font-size: 30px;
+      font-weight: bold;
+      color: #28a745;">123456</p>
+      <p>Hãy sử dụng mã OTP này để hoàn thành tiến trình đổi mật khẩu của bạn. Đừng chia sẽ mã OTP này cho bất kỳ ai!</p>
     </div>
+    <div style="font-size: 12px;
+    text-align: center;
+    margin-top: 20px;
+    color: #6c757d;">
+      <p>Cảm ơn vì đã tin tưởng cửa hàng chúng tôi</p>
+      <p><span style="color: #007bff; ">© www.rohitchouhan.com.</span> All rights reserved.</p>
+    </div>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
