pull về rồi css nhen

--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -541,7 +541,7 @@
                         desktop_windows
                       </span>
                       <div class="content-dashboard-name-qty text-start">
-                        <p class="mb-0">Monitors</p>
+                        <p class="mb-0">Users</p>
                         <p class="mb-0">215</p>
                       </div>
                     </div>
@@ -561,7 +561,7 @@
                         desktop_windows
                       </span>
                       <div class="content-dashboard-name-qty text-start">
-                        <p class="mb-0">Monitors</p>
+                        <p class="mb-0">Bills</p>
                         <p class="mb-0">215</p>
                       </div>
                     </div>
@@ -581,7 +581,7 @@
                         desktop_windows
                       </span>
                       <div class="content-dashboard-name-qty text-start">
-                        <p class="mb-0">Monitors</p>
+                        <p class="mb-0">Vouchers</p>
                         <p class="mb-0">215</p>
                       </div>
                     </div>
