Hoàn thành xong crud màn hình

--- a/admin.html
+++ b/admin.html
@@ -499,6 +499,9 @@
             </div>
           </div>
         </div>
+
+        <!-- it hear -->
+
         <div class="content-right mt-4">
           <div class="content-right-container">
             <div class="content-right-container-box">
@@ -840,6 +843,9 @@
             </div>
           </div>
         </div>
+
+        <!-- it end hear -->
+
       </div>
     </section>
   </body>
