--- a/admin.html
+++ b/admin.html
@@ -506,7 +506,7 @@
           <div class="content-right-container">
             <div class="content-right-container-box">
               <h4 class="mb-4">Monitor</h4>
-              <div
+              <form
                 class="form-dashboard mb-5"
                 style="
                   width: 100%;
@@ -644,7 +644,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </form>
               <div class="content-right-table">
                 <div
                   class="content-right-table-head d-flex justify-content-between px-2 py-3 align-items-center"
